--- a/index.html
+++ b/index.html
@@ -203,6 +203,8 @@
     <p><b>Yêu cầu:</b> Nhúng bản đồ và nhúng video youtube bất kỳ vào trang web.</p>
     <iframe width="550" height="350" src="https://www.youtube.com/embed/pIsOTB43pXc" title="Bài Toán Người Du Lịch | Thuật Toán Quay Lui Nhánh Cận" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     
+    <div>
     <iframe width="600" height="400" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d74786.60981418804!2d106.75077755399546!3d10.895644791494123!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1svi!2s!4v1755960873521!5m2!1svi!2s" style="border:0;" allowfullscreen loading = "lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 </body>
 </html> 
